Description: Pasting Selected Range to Sheet as GDI Image, The chart images is incorrect. Steps to Reproduce: 1. Open the sample file 2. Select and Copy just the cells within the red rectangle that has the caption "Copy Range." 3. Move to another cell. 4. From the Paste Icon dropdown in the toolbar, Select to paste using the GDI Metafile option. Actual Results: 5. The chart image is incorrect. Expected Results: 5. The image should be the same as the copy source. Reproducible: Always User Profile Reset: No Additional Info: Not Reproduced with before Version 6.1.0.3 64bit, OS:Windows10 64bit Reproduced with before Version 6.2.0.3 64bit, OS:Windows10 64bit After "Version 7.4.0.3", it cannot be confirmed by another bug. https://bugs.documentfoundation.org/show_bug.cgi?id=153685
Created attachment 185458 [details] sample file
REPRODUCIBLE with Installation of Version: 7.5.0.1 (X86_64) Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: default; VCL: win – Locale: de-DE (de_DE); UI: de-DE Calc: threaded | Elementary (SVG) Theme | Normal UserProfile I see lots of GDI Copy Paste Problems, may be we will need to tease apart them. And during my tests, results changed. I will have to reboot and try again.
Well, the core problem reported here "some smaller damages in chart view after copy paste as GDI is no longer reproducible for me with Installation of Version: 7.5.0.1 (X86_64) Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: default; VCL: win – Locale: de-DE (de_DE); UI: de-DE Calc: threaded | Elementary (SVG) Theme | Normal UserProfile I only see "Bug 153685 - Pasting Selected Range to Sheet as GDI Image, The chart images are gone. " So I see the same result as user nobu in original report. LibO 6.2 is obsolete, may we can close this one?
(In reply to Rainer Bielefeld Retired from comment #3) > LibO 6.2 is obsolete, may we can close this one? No problem if you follow the rules. I have no expertise in this field, and I can't discuss this in English. I just report the bug in the simplest way possible. I posted this because I thought it wouldn't be corrected without showing "when is the most recent correct Version?"
Reproduced in: Version: 7.3.7.2 / LibreOffice Community Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3 Locale: en-AU (en_AU.UTF-8); UI: en-US Calc: threaded Not reproduced in: Version: 6.1.0.3 Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1 CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk2; Locale: en-AU (en_AU.UTF-8); Calc: group threaded Keeping open as it's not guaranteed that fixing bug 153685 will also fix this.
Bibisected with linux-64-6.2 repository to first bad commit 34b63425ed12b2c68557db3870f1f9c6ad90f1cf which points to the following range: source 726d7e7b8b50dca9914329dbfd9491f7c8961f68 source a28a839b9f9eeec1544c5ceeeabe7b1083ce1655 source 4b4942224b550235da228655677b5c068a053254 Last one is in 6.1, so not at fault. Armin and Noel, can you please have a look? Part of the Aw080 regressions?
Mike Kaganski committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/0c3580828811496052f41b09ad68fcc00a525f6f tdf#153706: do not add categories, when source data doesn't have them It will be available in 24.8.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Verified in: Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community Build ID: e939685f9c6918830bd3097062790bfccbce937e CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3 Locale: en-AU (en_AU.UTF-8); UI: en-US Calc: CL threaded Thanks Mike!
Mike Kaganski committed a patch related to this issue. It has been pushed to "libreoffice-24-2": https://git.libreoffice.org/core/commit/81c8c95b480ac32a18f8d7d0f4a0e3671b5b8b2b tdf#153706: do not add categories, when source data doesn't have them It will be available in 24.2.2. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.